Remove integrity check for Bootstrap JS after version upgrade.

--- a/examples/custom-report/src/jsMain/resources/index.html
+++ b/examples/custom-report/src/jsMain/resources/index.html
@@ -110,9 +110,7 @@
     </main>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 
 <script type="text/javascript">
     // https://github.com/vasturiano/force-graph
