--- a/invert-report/src/jsMain/resources/index.html
+++ b/invert-report/src/jsMain/resources/index.html
@@ -1,149 +1,49 @@
-<!--<!doctype html>-->
-<!--<html lang="en" data-bs-theme="auto">-->
-<!--<head>-->
-<!--    <script type="text/javascript">-->
-<!--        window.invert_report = window.invert_report || {};-->
+<!doctype html>
+<html lang="en" data-bs-theme="auto">
+<head>
 
-<!--        window.keysForObject = function (obj) {-->
-<!--            let newKeys = []-->
-<!--            let keys = obj.keys()-->
-<!--            let nextKey = keys.next();-->
-<!--            while (!nextKey.done) {-->
-<!--                newKeys.push(nextKey.value)-->
-<!--                nextKey = keys.next();-->
-<!--            }-->
-<!--            return newKeys-->
-<!--        }-->
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="description" content=""/>
+    <meta name="theme-color" content="#712cf9"/>
+    <title>Invert Report</title>
+    <link href="invert.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.min.css" rel="stylesheet"/>
+</head>
+<body>
 
-<!--        window.externalLoadJavaScriptFile = function (key, callback) {-->
-<!--            let src = "js/" + key + ".js"-->
-<!--            let s = document.createElement('script');-->
-<!--            s.setAttribute('src', src);-->
-<!--            s.onload = function () {-->
-<!--                let json = JSON.stringify(window.invert_report[key])-->
-<!--                callback(json)-->
-<!--            };-->
-<!--            document.body.appendChild(s);-->
-<!--        }-->
-<!--    </script>-->
+<header class="navbar sticky-top bg-dark flex-md-nowrap p-0 shadow" data-bs-theme="dark">
+    <a class="navbar-brand col-md-3 me-0 px-3 fs-6 text-white" href="#">Android Foundation Reports</a>
+    <!-- Loading Progress Renders Here -->
+    <div id="navbar_content" class="navbar-text pe-4 col-md-9 text-end">
+    </div>
+</header>
 
-<!--    <style>-->
-<!--        [data-bs-theme="dark"] img.bootstrap-icon {-->
-<!--            filter: invert(100);-->
-<!--        }-->
-<!--    </style>-->
+<div class="row">
+    <div class="col-lg-2 p-0">
+        <div class="sidebar border border-right bg-body-tertiary">
+            <div class="d-flex flex-column p-3 bg-body-tertiary">
+                <ul class="nav nav-pills flex-column mb-auto" id="navigation">
+                </ul>
+            </div>
+        </div>
+    </div>
 
-<!--    <meta charset="utf-8">-->
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1">-->
-<!--    <meta name="description" content="">-->
-<!--    <title>Invert Report</title>-->
-
-<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">-->
-
-<!--    &lt;!&ndash; Favicons &ndash;&gt;-->
-<!--    <meta name="theme-color" content="#712cf9">-->
-
-<!--    &lt;!&ndash; Custom styles for this template &ndash;&gt;-->
-<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.min.css" rel="stylesheet">-->
-<!--    &lt;!&ndash; Custom styles for this template &ndash;&gt;-->
-<!--    <style>-->
-<!--        @media (min-width: 768px) {-->
-<!--            .sidebar .offcanvas-lg {-->
-<!--                position: -webkit-sticky;-->
-<!--                position: sticky;-->
-<!--                top: 48px;-->
-<!--            }-->
-<!--        }-->
-
-<!--        .sidebar .nav-link {-->
-<!--            font-size: .875rem;-->
-<!--            font-weight: 500;-->
-<!--        }-->
-
-<!--        .sidebar-heading {-->
-<!--            font-size: .75rem;-->
-<!--        }-->
-
-<!--        .navbar-brand {-->
-<!--            padding-top: .75rem;-->
-<!--            padding-bottom: .75rem;-->
-<!--        }-->
-<!--    </style>-->
-<!--</head>-->
-<!--<body>-->
+    <main class="col-lg-10">
+        <div id="main_content" class="p-3">
+        </div>
+    </main>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="invert.js"></script>
+<script src="invert_web.js"></script>
+<script type="text/javascript">
+</script>
+</body>
+</html>
 
 
-<!--<header class="navbar sticky-top bg-dark flex-md-nowrap p-0 shadow" data-bs-theme="dark">-->
-<!--    <a class="navbar-brand col-md-3 me-0 px-3 fs-6 text-white" href="#">Invert Report</a>-->
-<!--    &lt;!&ndash; Loading Progress Renders Here &ndash;&gt;-->
-<!--    <div id="navbar_content" class="navbar-text pe-4 col-md-9 text-end">-->
-<!--    </div>-->
-<!--</header>-->
+<script type="text/javascript">
 
-<!--<div class="row">-->
-<!--    <div class="col-lg-2 p-0">-->
-<!--        <div class="sidebar border border-right bg-body-tertiary">-->
-<!--            <div class="d-flex flex-column p-3 bg-body-tertiary">-->
-<!--                <ul class="nav nav-pills flex-column mb-auto" id="navigation">-->
-<!--                </ul>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-
-<!--    <main class="col-lg-10">-->
-<!--        <div id="main_content" class="p-3">-->
-<!--        </div>-->
-<!--    </main>-->
-<!--</div>-->
-
-<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>-->
-
-
-<!--<script type="text/javascript">-->
-<!--    // https://github.com/vasturiano/force-graph-->
-<!--    // https://unpkg.com/force-graph-->
-<!--    window.render3dGraph = function (domElementId, graphDataJson, width, height) {-->
-<!--        if(window.ForceGraph == undefined) {-->
-<!--            loadJsFileAsync("https://unpkg.com/force-graph", function (obj) {-->
-<!--                const graphData = JSON.parse(graphDataJson)-->
-<!--                const Graph = ForceGraph()-->
-<!--                (document.getElementById(domElementId))-->
-<!--                .graphData(graphData)-->
-<!--                .nodeId('id')-->
-<!--                .nodeAutoColorBy('group')-->
-<!--                .dagMode('rl')-->
-<!--                .width(width)-->
-<!--                .height(height)-->
-<!--                .nodeCanvasObject((node, ctx, globalScale) => {-->
-<!--                    const label = node.id;-->
-<!--                    const fontSize = 12 / globalScale;-->
-<!--                    ctx.font = `${fontSize}px Sans-Serif`;-->
-<!--                    const textWidth = ctx.measureText(label).width;-->
-<!--                    const bckgDimensions = [textWidth, fontSize].map(n => n + fontSize * 0.2);-->
-
-<!--                    ctx.fillStyle = 'rgba(255, 255, 255, 0.8)';-->
-<!--                    ctx.fillRect(node.x - bckgDimensions[0] / 2, node.y - bckgDimensions[1] / 2, ...bckgDimensions);-->
-
-<!--                    ctx.textAlign = 'center';-->
-<!--                    ctx.textBaseline = 'middle';-->
-<!--                    ctx.fillStyle = node.color;-->
-<!--                    ctx.fillText(label, node.x, node.y);-->
-
-<!--                    node.__bckgDimensions = bckgDimensions;-->
-<!--                })-->
-<!--                .onNodeClick(node => {-->
-<!--                    Graph.centerAt(node.x, node.y, 1000);-->
-<!--                    Graph.zoom(8, 2000);-->
-<!--                })-->
-<!--                .nodePointerAreaPaint((node, color, ctx) => {-->
-<!--                    ctx.fillStyle = color;-->
-<!--                    const bckgDimensions = node.__bckgDimensions;-->
-<!--                    bckgDimensions && ctx.fillRect(node.x - bckgDimensions[0] / 2, node.y - bckgDimensions[1] / 2, ...bckgDimensions);-->
-<!--                });-->
-<!--            });-->
-<!--        }-->
-<!--    }-->
-<!--</script>-->
-<!--<script src="invert_web.js"></script>-->
-<!--</body>-->
-<!--</html>-->
+</script>
