--- a/invert-gradle-plugin/src/main/resources/META-INF/index.html
+++ b/invert-gradle-plugin/src/main/resources/META-INF/index.html
@@ -36,7 +36,7 @@
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="invert.js"></script>
-<script src="invert_web.js"></script>
+<script src="invert-report.js"></script>
 <script type="text/javascript">
 </script>
 </body>
