--- a/invert-gradle-plugin/src/main/resources/META-INF/index.html
+++ b/invert-gradle-plugin/src/main/resources/META-INF/index.html
@@ -47,7 +47,7 @@
     <div id="navbar_content"></div>
 </header>
 
-<div class="sidebar border bg-body-tertiary dashboard-sidebar p-2">
+<div class="sidebar bg-body-tertiary dashboard-sidebar p-2">
     <ul class="nav nav-pills flex-column mb-auto" id="navigation">
     </ul>
 </div>
