Homepage cleanup with repository urls and title bar with url.

--- a/invert-gradle-plugin/src/main/resources/META-INF/index.html
+++ b/invert-gradle-plugin/src/main/resources/META-INF/index.html
@@ -41,7 +41,9 @@
 <body>
 
 <header class="navbar my-sticky-top p-0 bg-light border">
-    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6 fw-semibold" href="#">Invert Report</a>
+    <a class="navbar-brand me-0 px-3 fs-6 fw-semibold" href="#">
+        <div id="navbar_title"></div>
+    </a>
 
     <!-- Loading Progress Renders Here -->
     <div id="navbar_content"></div>
