--- a/invert-gradle-plugin/src/main/resources/META-INF/index.html
+++ b/invert-gradle-plugin/src/main/resources/META-INF/index.html
@@ -50,7 +50,7 @@
 </header>
 
 <div class="sidebar bg-body-tertiary dashboard-sidebar p-2">
-    <ul class="nav nav-pills flex-column mb-auto" id="navigation">
+    <ul class="nav nav-pills flex-column mb-auto p-1" id="navigation">
     </ul>
 </div>
 
