adding dark mode support

--- a/invert-gradle-plugin/src/main/resources/META-INF/index.html
+++ b/invert-gradle-plugin/src/main/resources/META-INF/index.html
@@ -12,7 +12,10 @@
     <link href="https://getbootstrap.com/docs/5.3/examples/sidebars/sidebars.css" rel="stylesheet"/>
 
     <!-- -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css"
+          media="(prefers-color-scheme: light), (prefers-color-scheme: no-preference)">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css"
+          media="(prefers-color-scheme: dark)">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
 
     <!-- and it's easy to individually load additional languages -->
@@ -22,7 +25,7 @@
 </head>
 <body>
 
-<header class="navbar my-sticky-top p-0 bg-light border">
+<header class="navbar my-sticky-top p-0 bg-body-tertiary border">
     <a class="navbar-brand me-0 px-3 fs-6 fw-semibold" href="#">
         <div id="navbar_title"></div>
     </a>
